--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Djavaa Whitter</title>
+  </head>
 <body>
-  <h1>Hello World</h1>
-  <p>I'm hosted with GitHub Pages.</p>
+  <nav>
+    <u1>
+      <li><a href="/">Home</a></li>
+      <li><a href="about">About</a></li>
+      <li><a href="/cv">CV</a></li>
+      <li><a href="/blog"><Blog</a></li>
+    </u1>
+  </nav>
+  <div class="container">
+  <div class="blurb">
+    <h1>Hello! I'm Djavaa Whitter.</h1>
+      <p>I'm a senior at Brooklyn College with a major in Information Systems. I want to do a little bit of everything! 
+        <a href="/about">Read more about me and my goals!</a></p>
+    
+  </div><!-- /.blurb -->
+  </div><!-- /.container --?
+  <footer>
+  <u1>
+      <li><a href="mailto:collegedjavaa@gmail.com">email</a></li>
+      <li><a href="https:://github.com/collegedjavaa">github.com/collegedjavaa</a></li>
+  </u1>
+  </footer>
 </body>
 </html>
