--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <p>DJAVAA WHITTER</p>
         
-        <a href="about.html" class="active">◆ ABOUT ◆</a>
+        <a href="index.html" class="active">◆ ABOUT ◆</a>
         <a href="projects.html">◆ PROJECTS ◆</a>
         <a href="skills.html">◆ SKILLS ◆</a>
         <a href="art.html">◆ ART ◆</a>
