--- a/art.html
+++ b/art.html
@@ -16,7 +16,7 @@
         
         <p>DJAVAA WHITTER</p>
         
-        <a href="index.html">◆ ABOUT ◆</a>
+        <a href="about.html">◆ ABOUT ◆</a>
         <a href="projects.html">◆ PROJECTS ◆</a>
         <a href="skills.html">◆ SKILLS ◆</a>
         <a href="art.html" class="active">◆ ART ◆</a>
